<resources>
    <string name="app_name">Restate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="archive">Archive</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome_back">Welcome Back 👋</string>
    <string name="josumaru">Josumaru</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="popular">Popular</string>
    <string name="popular_property_s">Popular Property</string>
    <string name="see_all">see all</string>
    <string name="_2040_sqft">2040 sqft</string>
    <string name="trending">Trending</string>
    <string name="buy_sell">Buy/Sell</string>
    <string name="cheap">Cheap</string>
    <string name="japanese_description">Minka, or traditional Japanese houses, are characterized by tatami mat flooring, sliding doors, and wooden engawa verandas. Another aspect that persists even in Western-style homes in Japan is the genkan, an entrance hall where people remove footwear. The flooring for the house proper is raised a little off the ground to prevent dampness from entering and to keep the living area from flooding in the case of heavy rain. The lower level is known as the tataki, and was traditionally made of packed earth, although concrete is common today. After removal, shoes are put in the getabako—a cabinet that derives its name from geta, or wooden clogs, that Japanese people once commonly wore. Rooms are divided by partitions made from washi, Japanese paper. To enter, simply slide the door along its wooden rail. A common distinction is made between fusuma and shōji. Fusuma use heavier paper or sometimes cloth and are opaque, serving as a more distinct barrier. Unlike walls, however, fusuma can easily be removed to rearrange space within the house.\n\nShōji are lighter than fusuma, with paper affixed to a wooden lattice. They prevent people from seeing through, but brighten up rooms by allowing light to pass. As paper is porous, shōji also help airflow and reduce humidity. In modern Japanese-style houses they are often set in doors between panes of glass. With one variation, known as the “snow-viewing” or yukimi shōji, it is possible to slide up the lower section and look out through the glass.\n\nTatami flooring covered with woven rush is perhaps the most essential element in a traditional house. The faint smell of tatami is a distinct characteristic of Japanese rooms, and the springy but firm mats are pleasant to sit or lie on. Real estate agents still use the jō, or mat, standardized at 1.62 square meters, as the unit for measuring the area of rooms in properties, whether Japanese or Western-style.(*1) One mat can absorb up to 500 milliliters of moisture, releasing it when the air is dry. Tatami also absorbs nitrogen dioxide, helping to clean the air.\n\n</string>
</resources>