<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.HomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_welcome_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/md_theme_secondary" />
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/josumaru"
            app:layout_constraintTop_toTopOf="@id/tv_welcome_back"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textSize="48sp"
            android:textColor="@color/md_theme_secondary" />
        <androidx.cardview.widget.CardView
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="72dp"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:scaleType="centerCrop"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:contentDescription="@string/profile_picture"
                android:src="@drawable/img_profile"
                app:layout_constraintStart_toEndOf="@id/tv_username"
                />
        </androidx.cardview.widget.CardView>

        <HorizontalScrollView
            android:id="@+id/hsv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"
                    android:text="@string/popular"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_corner"
                    android:layout_marginStart="16dp"
                    android:textSize="24sp"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    app:chipCornerRadius="32dp"
                    android:text="@string/trending"
                    android:padding="16dp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_corner_tertiary"
                    android:layout_marginStart="16dp"
                    android:textSize="24sp"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    app:chipCornerRadius="32dp"
                    android:text="@string/buy_sell"
                    android:padding="16dp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_corner_tertiary"
                    android:layout_marginStart="16dp"
                    android:textSize="24sp"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    app:chipCornerRadius="32dp"
                    android:text="@string/cheap"
                    android:padding="16dp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/rounded_corner_tertiary"
                    android:layout_marginStart="16dp"
                    android:textSize="24sp"/>
            </LinearLayout>
        </HorizontalScrollView>
        <TextView
            android:id="@+id/tv_popular_property_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hsv_category"
            android:text="@string/popular_property_s"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textSize="32sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/see_all"
            android:textColor="@color/md_theme_secondaryContainer"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_popular_property_s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/tv_popular_property_s"
            app:layout_constraintTop_toBottomOf="@id/hsv_category" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_real_estate"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_popular_property_s" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
